results/SVCOMP/4-shot/log-ExSymExeD2I-2024_03_18_20_04_59.txt
class Main {
    //@ requires 0.0 <= x && x <= Integer.MAX_VALUE / 2;
    //@ ensures \result ==> (x > 0);
    public static boolean f (double x) {
        if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
            Main inst = new Main();
            return inst.test(x);
        }
        return true;
    }

    //@ requires x > 0;
    //@ ensures \result ==> (res > 0);
    public boolean test(double x) {

        int res = (int) ++x;
        if (res > 0) System.out.println("x >0");
        else {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:13: error: cannot find symbol
    //@ ensures \result ==> (res > 0);
                             ^
  symbol:   variable res
  location: class Main
1 error

